<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Park it</string>
    <string name="servicetag_in_nfctechnical_profilexml">this is for parking NFC TAG generation</string>
    <string name="book_parking_spots_at_your_fingertips">Book Parking Spots At Your Fingertips</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="are_you_sure_you_want_to_exit">Are you sure you want to exit?</string>
    <string name="leaving">Leaving</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_logo">App Logo</string>
    <string name="manage_accounts">Manage Accounts</string>
    <string name="activity">Activity</string>
    <string name="help">Help</string>
    <string name="home">Home</string>
    <string name="notifications">Notifications</string>
    <string name="park">Park</string>
    <string name="private_policy">Private Policy</string>
    <string name="rate_us">Rate us</string>
    <string name="settings">Settings</string>
    <string name="terms_of_use">Terms of Use</string>
    <string name="the_tech_sense">The Tech Sense</string>
    <string name="techsense123_gmail_com">techsense123@gmail.com</string>
    <string name="my_account">My Account</string>
    <string name="manage_account">Manage Account</string>
    <string name="logout">Logout</string>
    <string name="notification">Notification</string>
    <string name="promotions">Promotions</string>
    <string name="favorites">Favorites</string>
    <string name="support">Support</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account_login_here">Already have an account? Login here</string>
    <string name="i_accept_the_terms_of_use_and_privacy_policy">I accept the Terms of Use and Privacy Policy.</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign up</string>
    <string name="login_as_guest">Login as guest</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="login_successful">Login successful.</string>
    <string name="authentication_failed">Authentication failed.</string>
    <string name="account_created">Account created.</string>
    <string name="permission_granted_to_read_external_storage">Permission granted to read external storage</string>
    <string name="permission_denied_to_read_external_storage">Permission denied to read external storage</string>
    <string name="thetechsense123_gmail_com">thetechsense123@gmail.com</string>
    <string name="image">image/*</string>
    <string name="lock_portrait">lock_portrait</string>
    <string name="dark_theme">dark_theme</string>
    <string name="enter_e_mail">Enter E-mail</string>
    <string name="enter_passwords">Enter Password</string>
    <string name="user_not_found">User not found</string>
    <string name="invalid_password">Invalid Password</string>
    <string name="invalid_e_mail_format">Invalid E-mail format</string>
    <string name="invaild_credentials">Invaild Credentials</string>
    <string name="account_info">Account Info</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="profile_photo_updated">Profile Photo Upadated</string>
    <string name="profile_picture_upload_failed">Profile picture upload failed</string>
    <string name="edit_profile_picture">Edit Profile Picture</string>
    <string name="edit">Edit</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="add_phone_number">Add Phone Number</string>
    <string name="change_password">Change Password</string>
    <string name="clear_notifications">Clear Notifications</string>
    <string name="error_loading_image">Unable to Load Image! Try Again</string>
    <string name="error_crop_failed">Unable to Crop Image !\n</string>
    <string name="name_updated_successfully">Name Updated Successfully.</string>
    <string name="update_failed">Update Failed</string>
    <string name="error_updating_name">Error Updating Name</string>
    <string name="user_not_authenticated">User Not Authenticated</string>
    <string name="ok">OK</string>
    <string name="name_cannot_be_empty">Name cannot be empty.</string>
    <string name="cancel">Cancel</string>
    <string name="enter_new_name">Enter New Name</string>
    <string name="user_data_not_found">No user data</string>
    <string name="fetch_data_failed">Updating user info failed</string>
    <string name="_1_phone_number">+1 Phone number</string>
    <string name="dialog_title">Dialog Title</string>
    <string name="a_password_reset_link_will_be_sent_to">"A password reset link will be sent to: "</string>
    <string name="reset_password">Reset Password</string>
    <string name="no_email_found_for_the_current_user">No email found for the current user.</string>
    <string name="forgot_password">Forget Password ?</string>
    <string name="dummypassword">dummyPassword</string>
    <string name="user_is_created_successfully">User is created successfully.</string>
    <string name="this_email_is_not_registered">This email is not registered.</string>
    <string name="email_is_already_registered">Email is already registered.</string>
    <string name="reset_link_sent_to_your_email">Reset link sent to your email.</string>
    <string name="error">"Error: "</string>
    <string name="crop">Crop</string>
    <string-array name="theme_options">
        <item>Light</item>
        <item>Dark</item>
        <item>System Default</item>
    </string-array>
    <string-array name="currency_options">
        <item>USD</item>
        <item>INR</item>
        <item>CAD</item>
    </string-array>
    <string-array name="sensors">
        <item>Infra</item>
        <item>Ultrasonic</item>
    </string-array>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="location_not_found">Location not found</string>
    <string name="we_ve_missed_you_check_out_the_latest_parking_spots_available_for_you">We’ve missed you! Check out the latest parking spots available for you.</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="clear">Clear</string>
    <string name="no_notifications_yet">No Notifications Yet</string>
    <string name="welcome_to_parkit">Welcome To Parkit</string>
    <string name="explore_the_app_and_find_parking_spots_nearby">Explore the app and find parking spots nearby.</string>
    <string name="notification_permission_denied">Notification permission denied</string>
    <string name="email_update_unavailable">Email Update Unavailable</string>
    <string name="changing_your_email_address_is_currently_not_permitted_please_reach_out_to_our_support_team_for_further_assistance">Changing your email address is currently not permitted. Please reach out to our support team for further assistance.</string>
    <string name="please_enter_your_email">Please enter your email</string>
    <string name="reset_email_sent">Reset email sent</string>
    <string name="error_sending_email">Error sending email</string>
    <string name="lock_screen_to_portrait">Lock Screen to Portrait</string>
    <string name="push_notifications">Push Notifications</string>
    <string name="theme">Dark Theme</string>
    <string name="currency">Currency</string>
    <string name="booking_confirmed_and_saved">Booking confirmed and saved!</string>
    <string name="failed_to_save_booking">"Failed to save booking: "</string>
    <string name="please_select_a_slot_date_and_time">Please select a slot, date, and time.</string>
    <string name="failed_to_fetch_location_data">"Failed to fetch location data: "</string>
    <string name="location_data_is_not_available">Location data is not available.</string>
    <string name="failed_to_fetch_price">failed to fetch price</string>
    <string-array name="time_slots">
        <item>9:00 AM - 10:00 AM</item>
        <item>10:00 AM - 11:00 AM</item>
        <item>11:00 AM - 12:00 PM</item>
        <item>12:00 PM - 1:00 PM</item>
        <item>1:00 PM - 2:00 PM</item>
        <item>2:00 PM - 3:00 PM</item>
        <item>3:00 PM - 4:00 PM</item>
        <item>4:00 PM - 5:00 PM</item>
        <item>5:00 PM - 6:00 PM</item>
        <item>6:00 PM - 7:00 PM</item>
    </string-array>
    <string name="default_web_client_id">361561575523-q5k4o14em2cf6jm5f4fnts6o942078n1.apps.googleusercontent.com</string>
    <string name="sign_in_with_google" tools:ignore="MissingTranslation">Sign in with Google</string>
    <string name="park_it">Park It</string>
    <string name="please_fill_in_all_fields">Please fill in all fields</string>
    <string name="please_enter_a_valid_email_address">Please enter a valid email address</string>
    <string name="help_request_submitted">Help request submitted</string>
    <string name="error_adding_document">Error adding document</string>
    <string name="croppedimageuri">croppedImageUri</string>
    <string name="imageuri">imageUri</string>
    <string name="image1">image/*</string>
    <string name="parking_spot_easily_found">Parking Spot Easily Found</string>
    <string name="secure_transaction">Secure Transaction</string>
    <string name="user_friendly_interface">User-Friendly Interface</string>
    <string name="real_time_features">Real-Time Features</string>
    <string name="feedback_submitted_successfully">Feedback submitted successfully!</string>
    <string name="error_submitting_feedback">"Error submitting feedback: "</string>
    <string name="error_fetching_user_info">"Error fetching user info: "</string>
    <string name="please_provide_a_rating_comment_or_select_an_option">Please provide a rating, comment, or select an option</string>
    <string name="notification_enabled">Notification Enabled</string>
    <string name="notifications_enabled">Notifications Enabled</string>
    <string name="you_will_receive_notifications">You will receive notifications</string>
    <string name="active">Active</string>
    <string name="upcoming">Upcoming</string>
    <string name="history">History</string>
    <string name="location_permission_denied">Location permission denied</string>
    <string name="add_to_favorite">Add to Favorite</string>
    <string name="postal_code">Postal Code</string>
    <string name="this_is_a_sample_message_to_display_the_details">This is a sample message to display the details.</string>
    <string name="location_name">Location Name</string>
    <string name="back">Back</string>
    <string name="parking_location_name">Parking Location Name</string>
    <string name="enter_location_name">Enter Location Name</string>
    <string name="search_address">Search Address</string>
    <string name="search_for_an_address">Search for an address</string>
    <string name="enter_postal_code">Enter Postal Code</string>
    <string name="price_per_hour">Price per Hour</string>
    <string name="enter_price_in_cad">Enter Price in CAD$</string>
    <string name="add_new_parking_location">Add New Parking Location</string>
    <string name="parking_address">Parking Address</string>
    <string name="enter_parking_address">Enter Parking Address</string>
    <string name="location_address">Location Address</string>
    <string name="price_0_00">Price: $0.00</string>
    <string name="confirm">Confirm</string>
</resources>