<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/notification"
        android:icon="@drawable/notifications"
        android:orderInCategory="1"
        android:title="@string/notification"
        app:iconTint="@color/colorAccent"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/favorites"
        android:icon="@drawable/baseline_favorite_24"
        android:orderInCategory="3"
        android:title="@string/favorites"
        app:iconTint="@color/colorAccent"
        app:showAsAction="never" />
    <item
        android:id="@+id/Offers"
        android:orderInCategory="2"
        android:icon="@drawable/baseline_local_offer_24"
        android:title="@string/promotions"
        app:iconTint="@color/colorAccent"
        app:showAsAction="always" />
    <item
        android:id="@+id/support"
        android:orderInCategory="4"
        app:iconTint="@color/colorAccent"
        android:icon="@drawable/baseline_contact_support_24"
        android:title="@string/support"
        app:showAsAction="ifRoom" />
</menu>